--- a/ros_noetic/Dockerfile
+++ b/ros_noetic/Dockerfile
@@ -1,9 +1,10 @@
 FROM ros:noetic-ros-base-focal
 
+ARG IMAGE_VERSION
+ENV IMAGE_VERSION $IMAGE_VERSION
+
 ENV WORKDIR /home/ros_noetic_ws
 WORKDIR $WORKDIR
-ENV ENVDIR /home/env
-RUN mkdir -p $ENVDIR
 
 # apt install requirements
 RUN apt update && apt install --no-install-recommends -y \
@@ -13,8 +14,8 @@ RUN apt update && apt install --no-install-recommends -y \
     && rm -rf /var/lib/apt/lists/*
 
 # pip install requirements
-COPY ./requirements.txt $ENVDIR/requirements.txt
-RUN pip3 install -r $ENVDIR/requirements.txt
+COPY ./requirements.txt $WORKDIR/requirements.txt
+RUN pip3 install -r $WORKDIR/requirements.txt
 RUN ln -s /usr/bin/python3.8 /usr/bin/python
 
 # build
@@ -27,8 +28,8 @@ ENV PYTHONPATH="$PYTHONPATH:$WORKDIR/devel/lib/python3/dist-packages"
 ENV PYTHONPATH="$PYTHONPATH:$WORKDIR"
 
 # setup entrypoint
-COPY ./entrypoint.sh $ENVDIR/entrypoint.sh
-ENTRYPOINT ["/home/env/entrypoint.sh"]
+COPY ./entrypoint.sh /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
 # boot command
 COPY ./boot $WORKDIR/boot
